rats/fixtures/compile_error/bad_test.rugo
use "test"

rats "this file has a syntax error"
  x = {
  test.assert_eq(1, 1)
end
